# PasswordGenerator

./: .gitignore  :  README.md  package.json
api/: pyproject.toml
api/api/: main.py
api/api/utils/: utils.py
public/: global.css  index.html
src/: App.svelte  main.js
