[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["nnamm <t.nnamm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}

[tool.poetry.dev-dependencies]
black = "^21.11b0"
flake8 = "^4.0.1"
mypy = "^0.910"
isort = "^5.10.1"
pylint = "^2.11.1"
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = 88

[flake8]
max-line-length = 88
max-complexity = 20
extend-ignore = "E203, W503, W504"

[tool.mypy]
ignore_missing_imports = 1
